--- a/code/chap05katya.ipynb
+++ b/code/chap05katya.ipynb
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -1577,16 +1577,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<generator object lcg at 0x7f3e6a52bbf8>"
+       "<generator object lcg at 0x7f26d562df10>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1613,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1639,213 +1639,29 @@
       "[1 1 0 ..., 0 0 0]\n",
       "[1 1 0 ..., 0 0 0]\n",
       "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
-      "[1 1 0 ..., 0 0 0]\n",
       "[1 1 0 ..., 0 0 0]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 20000 is out of bounds for axis 0 with size 20000",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-63-c4bdd7856f46>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_single\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mca\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/ThinkComplexity2/code/Cell1D.py\u001b[0m in \u001b[0;36mloop\u001b[0;34m(self, steps)\u001b[0m\n\u001b[1;32m     62\u001b[0m         \u001b[0;34m\"\"\"Executes the given number of time steps.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msteps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/ThinkComplexity2/code/Cell1D.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     70\u001b[0m         \u001b[0mwindow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0mcorr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorrelate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwindow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'same'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m         \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcorr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 20000 is out of bounds for axis 0 with size 20000"
      ]
     }
    ],
    "source": [
     "rule = 30\n",
-    "m = 10001\n",
-    "n = 20000\n",
+    "m = 1000\n",
+    "n = 2000\n",
     "ca = Cell1D(rule, n, m)\n",
     "ca.start_single()\n",
-    "for i in range(n-1):\n",
+    "for i in range(20):\n",
     "    ca.loop(i)\n",
     "    print(ca.array[:,m//2])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
